<resources>

    <string name="app_name">AcademiApp</string>
    <string name="title_activity_inicio">inicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_calendario">Calendario Escolar</string>
    <string name="menu_horario">Horario</string>
    <string name="menu_calificaciones">Calificaciones</string>
    <string name="menu_materias">Materias</string>
    <string name="menu_profesores">Profesores</string>
    <string name="menu_notas">Notas</string>
    <string name="menu_tareas">Tareas</string>


</resources>